fixed content container layout bug

--- a/opinion-app/src/App.css
+++ b/opinion-app/src/App.css
@@ -197,6 +197,10 @@ footer{
   overflow: hidden;
 }
 
+#content > div{
+  width: 100%;
+}
+
 .padding-item{
   flex-basis: 40px;
 }
